--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   },
   "dependencies": {
     "ember-cli-babel": "^6.6.0",
-    "ember-cli-htmlbars": "^2.0.1"
+    "ember-cli-htmlbars": "^2.0.1",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "@lblod/ember-rdfa-editor-plugin-generator": "^0.1.0",
